libs/extractor/src/snapshots/extractor__tests__every_runtime_value_an_element_holds.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\n\"import { Box } from '@devup-ui/react';\\nclass A { #w = 1; render(f) { return <Box w={this.#w} {...this.#w} {...f()} />; } }\\nexport const a = async (f, X, tag) => <Box w={await f()} h={(f(), 2)} bg={new X()} color={tag`x`} zIndex={10n} m={f.n++} p={(f.v = 3)} opacity={null} flex={false} />;\",\nExtractOption::default(),).unwrap())"
---
ToBTreeSet {
    styles: {
        Dynamic(
            ExtractDynamicStyle {
                property: "background",
                level: 0,
                identifier: "__devupSpread7",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "color",
                level: 0,
                identifier: "__devupSpread6",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "height",
                level: 0,
                identifier: "__devupSpread8",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "margin",
                level: 0,
                identifier: "__devupSpread4",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "padding",
                level: 0,
                identifier: "__devupSpread3",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "width",
                level: 0,
                identifier: "__devupSpread0",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "width",
                level: 0,
                identifier: "__devupSpread9",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "z-index",
                level: 0,
                identifier: "__devupSpread5",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui-0.css\";\nclass A {\n\t#w = 1;\n\trender(f) {\n\t\treturn ((__devupSpread0, __devupSpread1, __devupSpread2) => <div {...__devupSpread1} {...__devupSpread2} className={`OHaytne9g88rgua2yt ${__devupSpread2?.className || \"\"} ${__devupSpread1?.className || \"\"}`} style={{\n\t\t\t...{ \"---SUHcp4uvrns_1lzaw3u-bu\": __devupSpread0 },\n\t\t\t...__devupSpread2?.style,\n\t\t\t...__devupSpread1?.style\n\t\t}} />)(this.#w, ((__devupSpreadValue) => ({ ...__devupSpreadValue }))(this.#w), ((__devupSpreadValue) => ({ ...__devupSpreadValue }))(f()));\n\t}\n}\nexport const a = async (f, X, tag) => ((__devupSpread9, __devupSpread8, __devupSpread7, __devupSpread6, __devupSpread5, __devupSpread4, __devupSpread3) => <div className=\"OHccknh696183br0e0 OHau9vmefov6jv9cfi OHa1ubut9qc2_mc8z_ OHaobmmpag36_gc7tc OHcsobo5ufhve58x_s OHbxfub0pnbw2tgy2o OHaakquv3crnh1w7h8\" style={{\n\t\"---SUHcp4uvrns_1lzaw3u-d5\": __devupSpread9,\n\t\"---SUHcp4uvrns_1lzaw3u-ej\": __devupSpread8,\n\t\"---SUHcp4uvrns_1lzaw3u-ew\": __devupSpread7,\n\t\"---SUHcp4uvrns_1lzaw3u-fb\": __devupSpread6,\n\t\"---SUHcp4uvrns_1lzaw3u-fr\": __devupSpread5,\n\t\"---SUHcp4uvrns_1lzaw3u-fz\": __devupSpread4,\n\t\"---SUHcp4uvrns_1lzaw3u-f_\": __devupSpread3\n}} />)(await f(), (f(), 2), new X(), tag`x`, 10n, f.n++, f.v = 3);\n",
}
