libs/extractor/src/snapshots/extractor__tests__extract_advenced_selector-7.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {globalCss} from '@devup-ui/core'\n        globalCss({\n          \"_is\": {\n            params: [\"test\", variable],\n            _hover: {\n              bg: \"blue\"\n            },\n            _print: {\n              bg: \"green\",\n            },\n            bg: \"red\"\n          }\n        })\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: false, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "blue",
                level: 0,
                selector: Some(
                    Global(
                        "*:is(test):hover",
                        "test.tsx",
                    ),
                ),
                style_order: Some(
                    0,
                ),
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "green",
                level: 0,
                selector: Some(
                    Global(
                        "*:is(test):print",
                        "test.tsx",
                    ),
                ),
                style_order: Some(
                    0,
                ),
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "red",
                level: 0,
                selector: Some(
                    Global(
                        "*:is(test)",
                        "test.tsx",
                    ),
                ),
                style_order: Some(
                    0,
                ),
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui-0.css\";\n;\n",
}
